--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@vicons/material": "^0.12.0",
     "@vicons/utils": "^0.1.4",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.23",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
