--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.8.3",
     "pinia": "^2.0.23",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
