--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint . --ext .vue,.js,.cjs,.mjs --fix",
+    "lint-staged": "lint-staged",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@vicons/material": "^0.12.0",
     "@vicons/utils": "^0.1.4",
     "core-js": "^3.8.3",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
     "pinia": "^2.0.23",
+    "prettier": "^2.7.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5"
@@ -24,11 +29,11 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-airbnb": "^6.0.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-vue": "^8.0.3",
-    "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^8.7.1",
     "naive-ui": "^2.33.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
