--- a/package.json
+++ b/package.json
@@ -3,32 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint . --ext .vue,.js,.cjs,.mjs --fix",
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext .vue,.js,.cjs,.mjs --fix",
     "lint-staged": "lint-staged",
     "prepare": "husky install"
   },
   "dependencies": {
     "@vicons/material": "^0.12.0",
     "@vicons/utils": "^0.1.4",
-    "core-js": "^3.8.3",
+    "@vitejs/plugin-vue": "^3.2.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
     "pinia": "^2.0.23",
     "prettier": "^2.7.1",
+    "vite": "^3.2.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
@@ -36,6 +30,6 @@
     "eslint-plugin-vue": "^8.7.1",
     "naive-ui": "^2.33.3",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
