--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@vicons/material": "^0.12.0",
-    "@vicons/utils": "^0.1.4",
-    "@vitejs/plugin-vue": "^3.2.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
     "pinia": "^2.0.23",
-    "prettier": "^2.7.1",
     "vite": "^3.2.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vicons/material": "^0.12.0",
+    "@vicons/utils": "^0.1.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
@@ -30,6 +32,8 @@
     "eslint-plugin-vue": "^8.7.1",
     "naive-ui": "^2.33.3",
     "sass": "^1.32.7",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.4"
   }
 }
